# graphics-in-2d

./: .gitignore  LICENSE  README.md  build.sh  cabal.project  gi2d.adoc  index.html
.github/workflows/: publish.yml
imagegen/: CHANGELOG.md  imagegen.cabal
imagegen/app/: Main.hs
imagegen/src/: AnalyticAntialias.hs
js/: demo-line-rect.js
