cabal-version:      2.4
name:               imagegen
version:            0.1.0.0
synopsis:           Algorithmic image generation.
description:        Generates images for the text on 2D graphics.
license:            BSD-3-Clause
author:             Jonathan Merritt
maintainer:         j.s.merritt@gmail.com
copyright:          Copyright (C) Jonathan Merritt 2021
category:           Documentation
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/lancelet/graphics-in-2d.git

common base
  default-language: Haskell2010
  build-depends:    base ^>=4.14.1.0

common ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

executable imagegen
  import:         base, ghc-options
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , diagrams-core  ^>=1.5.0
    , diagrams-lib   ^>=1.4.4
    , diagrams-svg   ^>=1.4.3
